--- a/.github/workflows/release-helm.yml
+++ b/.github/workflows/release-helm.yml
@@ -22,7 +22,15 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v4.2.0
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.6.0
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Update Index
+        run: |
+          helm repo index .
+          git config --global user.email "ashutosh.ojha@geminisolutions.com"
+          git config --global user.name "Ashutosh Ojha"
+          git add index.yaml
+          git commit -m "Update chart index"
+          git push
+#      - name: Run chart-releaser
+#        uses: helm/chart-releaser-action@v1.6.0
+#        env:
+#          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
