--- a/.github/workflows/release-helm.yml
+++ b/.github/workflows/release-helm.yml
@@ -12,12 +12,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.7
         with:
+          token: "${{ secrets.TOKEN }}"
           fetch-depth: 0
-
-      - name: Configure Git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Install Helm
         uses: azure/setup-helm@v4.2.0
