--- a/3-tier-app/values.yaml
+++ b/3-tier-app/values.yaml
@@ -50,8 +50,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths:
+    - paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
